@@ -1,6 +1,12 @@
 2008-07-24  Jonathan Gonzalez V.  <zeus@gnu.org>
 
+	* caja.c (on_btn_cash_box_open_clicked)
+	(on_btn_cash_box_close_clicked): Added functions to open and close
+	the cash box using buttons from the main sell window.
+
 	* ventas.c (ventas_win): Removed call to prepare_caja() at the end.
+	(on_delete_ventas_gui): Deleted code that was asking to close the
+	cash box if the user was the admin.
 
 	* config_file.c (rizoma_get_value, rizoma_get_value_int)
 	(rizoma_get_value_boolean, rizoma_get_double_list): Added check of
